# dynamic-neural-field-degeneration

./: LICENSE  README.md
dynamic-neural-field-degeneration/: CMakeLists.txt  CMakeSettings.json  build.bat  dynamic-neural-field-degeneration.cpp  dynamic-neural-field-degeneration.h  experiment_parameters.json  hue_to_angle.json  new-scenario.ttt  scenario-new.ttt  scenario-refactor.ttt  scenario-v2.ttt  scenario.ttt  scene.ttt  test-cuboid.ttt  testbench.cpp  vision-rgb-hue.ttt
dynamic-neural-field-degeneration/data/: NEURONS_DEACTIVATE - centroids.txt  NEURONS_DEACTIVATE-0.txt  NEURONS_DEACTIVATE-20.txt  centroids.txt  deactivate post-synaptic neurons-0.txt  deactivate weights - centroids.txt  deactivate weights.txt  per - dec_decision field.txt  per - dec_perceptual field.txt  per - dec_weights - copy.txt  per - dec_weights - percentage - 10.txt  per - dec_weights - percentage - 20.txt  per - dec_weights - percentage - 50.txt  per - dec_weights.txt  per - out_output field.txt  per - out_perceptual field.txt  per - out_weights.txt  plot_coupling_data.m  randomize weights.txt  reduce 0.6 weights - centroids.txt  reduce 0.8 weights - centroids.txt  weights-randomize-0.txt  weights-randomize-140.txt  weights-randomize-150.txt  weights-randomize-170.txt  weights-randomize-180.txt  weights-randomize-50.txt
dynamic-neural-field-degeneration/data/analysis-files/: .RData  .Rhistory  relearning_analysis_deactivate_post_synaptic.r  relearning_analysis_deactivate_post_synaptic_histogram.r  relearning_analysis_deactivate_pre_synaptic.r  relearning_analysis_deactivate_pre_synaptic_histogram.r  relearning_analysis_deactivate_weights.r  relearning_analysis_deactivate_weights_histogram.r  relearning_analysis_deactivate_weights_spline.r
dynamic-neural-field-degeneration/data/matlab-analysis/: .Rhistory  relearning_analysis.asv  relearning_analysis.m  relearning_analysis_deactivate_post_synaptic.m  relearning_analysis_deactivate_pre_synaptic.m  relearning_analysis_deactivate_pre_synaptic.r  relearning_analysis_deactivate_weights.m
dynamic-neural-field-degeneration/data/matlab-analysis-files/: .Rhistory  relearning_analysis_deactivate_post_synaptic.m  relearning_analysis_deactivate_post_synaptic.r  relearning_analysis_deactivate_post_synaptic_histogram.r  relearning_analysis_deactivate_pre_synaptic.m  relearning_analysis_deactivate_pre_synaptic.r  relearning_analysis_deactivate_pre_synaptic_histogram.r  relearning_analysis_deactivate_weights - Copy.r  relearning_analysis_deactivate_weights.m  relearning_analysis_deactivate_weights.r  relearning_analysis_deactivate_weights_histogram.r
dynamic-neural-field-degeneration/data/results/: 10.0 deactivate post-synaptic neurons - centroids.txt  10.0 deactivate pre-synaptic neurons - centroids.txt  10.0 deactivate weights - centroids.txt  10.0 randomize weights - centroids.txt  10.0 reduce 0.005 weights - centroids.txt  10.0 reduce 0.05 weights - centroids.txt  10.0 reduce 0.2 weights - centroids.txt  102.0 deactivate post-synaptic neurons - centroids.txt  102.0 deactivate pre-synaptic neurons - centroids.txt  102.0 deactivate weights - centroids.txt  102.0 randomize weights - centroids.txt  102.0 reduce 0.005 weights - centroids.txt  115.0 deactivate post-synaptic neurons - centroids.txt  115.0 deactivate pre-synaptic neurons - centroids.txt  115.0 deactivate weights - centroids.txt  115.0 randomize weights - centroids.txt  115.0 reduce 0.4 weights - centroids.txt  115.0 reduce 0.6 weights - centroids.txt  115.0 reduce 0.8 weights - centroids.txt  14.0 deactivate post-synaptic neurons - centroids.txt  14.0 deactivate pre-synaptic neurons - centroids.txt  14.0 deactivate weights - centroids.txt  14.0 randomize weights - centroids.txt  14.0 reduce 0.05 weights - centroids.txt  14.0 reduce 0.2 weights - centroids.txt  140.0 deactivate post-synaptic neurons - centroids.txt  140.0 deactivate pre-synaptic neurons - centroids.txt  140.0 deactivate weights - centroids.txt  140.0 randomize weights - centroids.txt  140.0 reduce 0.4 weights - centroids.txt  140.0 reduce 0.6 weights - centroids.txt  140.0 reduce 0.8 weights - centroids.txt  15.0 deactivate post-synaptic neurons - centroids.txt  15.0 deactivate pre-synaptic neurons - centroids.txt  15.0 deactivate weights - centroids.txt  15.0 randomize weights - centroids.txt  15.0 reduce 0.4 weights - centroids.txt  15.0 reduce 0.6 weights - centroids.txt  15.0 reduce 0.8 weights - centroids.txt  (+147 more)
dynamic-neural-field-degeneration/experiments/: dynamic-neural-field-degeneration.h  inducing-degeneration.cpp  recovering-from-degeneration.cpp  testbench.cpp
dynamic-neural-field-degeneration/include/: #dnfcomposer_handler.h  #experiment_handler.h  coppeliasim-handler.h  coppeliasimHandler.h  coppeliasim_handler.h  degenerate_element_parameters.h  degenerate_field_coupling.h  degenerate_neural_field.h  degeneration_parameters.h  dnf-architecture.h  dnf_architecture.h  dnfarchitecture.h  dnfc_handler_ind.h  dnfc_handler_recov.h  dnfcomposer-handler.h  dnfcomposerHandler.h  dnfcomposer_handler.h  exp_handler_ind.h  exp_handler_recov.h  experiment-handler.h  experimentHandler.h  experimentInterface.h  experimentWindows.h  experiment_handler.h  experiment_parameters.h  macros.h  relearning_parameters.h  threadHandler.h  user-interface-window.h  user_interface_window.h
dynamic-neural-field-degeneration/src/: #dnfcomposer_handler.cpp  #experiment_handler.cpp  coppeliasim-handler.cpp  coppeliasimHandler.cpp  coppeliasim_handler.cpp  degenerate_field_coupling.cpp  degenerate_neural_field.cpp  degeneration_parameters.cpp  dnf-architecture.cpp  dnf_architecture.cpp  dnfarchitecture.cpp  dnfc_handler_ind.cpp  dnfc_handler_recov.cpp  dnfcomposer-handler.cpp  dnfcomposerHandler.cpp  dnfcomposer_handler.cpp  exp_handler_ind.cpp  exp_handler_recov.cpp  experiment-handler.cpp  experimentHandler.cpp  experimentInterface.cpp  experimentWindows.cpp  experiment_handler.cpp  experiment_parameters.cpp  relearning_parameters.cpp  threadHandler.cpp  user-interface-window.cpp  user_interface_window.cpp
(+698 files in other folders)
